# poetry-mypy-demo

./: pyproject.toml
poetry_mypy_demo/: main.py
